# vdt

./: CMakeLists.txt
include/vdt/: asin.h  tan.h  tanh.h  vdtMath.h
lib/: CMakeLists.txt
progs/: CMakeLists.txt
progs/units/: CMakeLists.txt
src/: CMakeLists.txt  numpy_wrapper_generator.py  signatures_generator.py  vc_wrapper_generator.py
